[package]
name = "rfox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.9.14"
serde_json = "1.0"
serde_regex = "1.1"
humantime-serde = "1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
clap = { version = "4.0.18", features = ["derive"] }
